crates/pg_syntax/tests/snapshots/postgres_regress/inet@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE INET_TBL (c cidr, i inet);"
---
CreateStmt@0..39
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "INET_TBL"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..29
    Ident@23..24 "c"
    Whitespace@24..25 " "
    TypeName@25..29
      Ident@25..29 "cidr"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ColumnDef@31..37
    Ident@31..32 "i"
    Whitespace@32..33 " "
    TypeName@33..37
      Ident@33..37 "inet"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

