crates/pg_syntax/tests/snapshots/postgres_regress/inet@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INET_TBL (c, i) VALUES (cidr('ffff:ffff:ffff:ffff::/24'), '::192.168.1.226');"
---
InsertStmt@0..89
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INET_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..23
    Ident@22..23 "c"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..26
    Ident@25..26 "i"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  SelectStmt@28..87
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..87
      FuncCall@36..67
        Ident@36..40 "cidr"
        Ascii40@40..41 "("
        AConst@41..67
          Sconst@41..67 "'ffff:ffff:ffff:ffff: ..."
      Ascii41@67..68 ")"
      Ascii44@68..69 ","
      Whitespace@69..70 " "
      AConst@70..87
        Sconst@70..87 "'::192.168.1.226'"
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

