crates/pg_syntax/tests/snapshots/postgres_regress/inet@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c AS cidr, broadcast(c),\n  i AS inet, broadcast(i) FROM INET_TBL;"
---
SelectStmt@0..72
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..16
    ColumnRef@7..8
      Ident@7..8 "c"
    Whitespace@8..9 " "
    As@9..11 "AS"
    Whitespace@11..12 " "
    Ident@12..16 "cidr"
  Ascii44@16..17 ","
  Whitespace@17..18 " "
  ResTarget@18..29
    FuncCall@18..29
      Ident@18..27 "broadcast"
      Ascii40@27..28 "("
      ColumnRef@28..29
        Ident@28..29 "c"
  Ascii41@29..30 ")"
  Ascii44@30..31 ","
  Newline@31..32 "\n"
  Whitespace@32..34 "  "
  ResTarget@34..43
    ColumnRef@34..35
      Ident@34..35 "i"
    Whitespace@35..36 " "
    As@36..38 "AS"
    Whitespace@38..39 " "
    Ident@39..43 "inet"
  Ascii44@43..44 ","
  Whitespace@44..45 " "
  ResTarget@45..56
    FuncCall@45..56
      Ident@45..54 "broadcast"
      Ascii40@54..55 "("
      ColumnRef@55..56
        Ident@55..56 "i"
  Ascii41@56..57 ")"
  Whitespace@57..58 " "
  From@58..62 "FROM"
  Whitespace@62..63 " "
  RangeVar@63..71
    Ident@63..71 "INET_TBL"
  Ascii59@71..72 ";"

