crates/pg_syntax/tests/snapshots/postgres_regress/inet@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c AS cidr, masklen(c) AS \"masklen(cidr)\",\n  i AS inet, masklen(i) AS \"masklen(inet)\" FROM INET_TBL\n  WHERE masklen(c) <= 8;"
---
SelectStmt@0..130
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..16
    ColumnRef@7..8
      Ident@7..8 "c"
    Whitespace@8..9 " "
    As@9..11 "AS"
    Whitespace@11..12 " "
    Ident@12..16 "cidr"
  Ascii44@16..17 ","
  Whitespace@17..18 " "
  ResTarget@18..47
    FuncCall@18..27
      Ident@18..25 "masklen"
      Ascii40@25..26 "("
      ColumnRef@26..27
        Ident@26..27 "c"
    Ascii41@27..28 ")"
    Whitespace@28..29 " "
    As@29..31 "AS"
    Whitespace@31..32 " "
    Ident@32..47 "\"masklen(cidr)\""
  Ascii44@47..48 ","
  Newline@48..49 "\n"
  Whitespace@49..51 "  "
  ResTarget@51..60
    ColumnRef@51..52
      Ident@51..52 "i"
    Whitespace@52..53 " "
    As@53..55 "AS"
    Whitespace@55..56 " "
    Ident@56..60 "inet"
  Ascii44@60..61 ","
  Whitespace@61..62 " "
  ResTarget@62..91
    FuncCall@62..71
      Ident@62..69 "masklen"
      Ascii40@69..70 "("
      ColumnRef@70..71
        Ident@70..71 "i"
    Ascii41@71..72 ")"
    Whitespace@72..73 " "
    As@73..75 "AS"
    Whitespace@75..76 " "
    Ident@76..91 "\"masklen(inet)\""
  Whitespace@91..92 " "
  From@92..96 "FROM"
  Whitespace@96..97 " "
  RangeVar@97..105
    Ident@97..105 "INET_TBL"
  Newline@105..106 "\n"
  Whitespace@106..108 "  "
  Where@108..113 "WHERE"
  Whitespace@113..114 " "
  AExpr@114..129
    FuncCall@114..123
      Ident@114..121 "masklen"
      Ascii40@121..122 "("
      ColumnRef@122..123
        Ident@122..123 "c"
    Ascii41@123..124 ")"
    Whitespace@124..125 " "
    LessEquals@125..127 "<="
    Whitespace@127..128 " "
    AConst@128..129
      Iconst@128..129 "8"
  Ascii59@129..130 ";"

